--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -12,7 +12,7 @@
   &__brand {
     margin-left: 32px;
     font-size: 64px;
-    font-weight: bold;
+    @extend .bold;
     @media all and (max-width: 980px){
       font-size: 42px;
     }
