--- a/src/views/Home/Home.scss
+++ b/src/views/Home/Home.scss
@@ -1,11 +1,13 @@
 .home {
-  width: 600px;
-  padding: 28px;
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  @extend .centered;
+  @media all and (max-width: 980px) {
+    width: calc(100% - 32px);
+  }
 
   &__title {
     max-width: 500px;
@@ -14,7 +16,7 @@
     line-height: 22px;
 
     &--bold {
-      font-weight: bold;
+      @extend .bold;
     }
   }
 
@@ -29,11 +31,12 @@
       position: relative;
       height: 40px;
       width: 65%;
-      padding-left: 12px;
+      padding: 0 0 0 12px;
       color: #fff;
-      background: rgba(255, 255, 255, .1);
-      backdrop-filter: blur(10px);
+      @extend .background-blur;
       border: 1px solid #fff;
+      -webkit-appearance: none;
+      border-radius: 0;
       @media all and (max-width: 980px) {
         width: 60%;
       }
@@ -41,13 +44,12 @@
 
     &-button {
       width: 30%;
-      height: 44px;
+      height: 42px;
       color: #fff;
       border: 1px solid #fff;
       text-transform: uppercase;
       letter-spacing: 1.2px;
-      background: rgba(255, 255, 255, 0.3);
-      backdrop-filter: blur(10px);
+      @extend .background-blur;
       transition: background .3s;
       will-change: background;
 
