--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -15,9 +15,17 @@
    font-family: sans-serif;
  }
 
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.boxed {
+  width: 100%;
+  max-width: 1366px;
+  margin: 0 auto;
+  padding: 28px 0;
+  @media all and (max-width: 980px) {
+    width: calc(100% - 32px) !important;
+    padding: 56px 0;
+  }
+}
+
+.no-scroll {
+  overflow: hidden;
 }
