--- a/src/assets/styles/_reset.scss
+++ b/src/assets/styles/_reset.scss
@@ -24,6 +24,11 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 /* make sure to set some focus styles for accessibility */
 :focus {
   outline: 0;
@@ -123,6 +128,11 @@ html {
   font-size: 100%; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
   -ms-text-size-adjust: 100%; /* 2 */
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: border-box;
 }
 
 /**
