--- a/src/components/WeatherDetails/MoreDetails/MoreDetails.scss
+++ b/src/components/WeatherDetails/MoreDetails/MoreDetails.scss
@@ -23,10 +23,14 @@
     width: 100%;
     text-align: center;
     margin-bottom: 12px;
+    @media all and (max-width: 980px) {
+      font-size: 10px;
+    }
 
     &--light {
       @extend .light;
       @extend .background-blur;
+      min-height: 32px;
       padding: 20px;
       margin-right: 12px;
       display: flex;
