Functioncal comp and try catch and more fixes

--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -29,3 +29,10 @@
 .no-scroll {
   overflow: hidden;
 }
+
+.centralized {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
